--- a/Part 2/2.18-2.20/package.json
+++ b/Part 2/2.18-2.20/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2.1",
+  "name": "2.18",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,12 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "server": "json-server -p3002 --watch db.json"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.6.5",
-    "g": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
